@@ -8,6 +8,7 @@
 - Added billing to your hours
   - You can pay or earn! Define the expected earnings and transactions over your day and even how much billable hours you expect.
   - Added a option to disable billing to specific days
+- Added unplanned tasks support
 
 * Version 0.3.0 (25 Sep 2024)
 - Option to highlight now action at Markdown representation =--highlightAction=
